Update DiscountCodes
