# usecases/dto/dto_discount_codes.go
@@ -9,6 +9,7 @@ type DiscountCodesDto struct {
 	DiscountCodeID     string    `json:"discount_code_id" db:"discount_codes_id"`
 	Title              string    `json:"title" db:"title"`
 	Description        string    `json:"description" db:"description"`
+	Quantity           int       `json:"quantity" db:"quantity"`
 	Code               string    `json:"code" db:"code"`
 	DiscountPercentage float64   `json:"discount_percentage" db:"discount_percentage"`
 	ValidFrom          time.Time `json:"valid_from" db:"valid_from"`
@@ -21,6 +22,7 @@ func (c *DiscountCodesDto) ToPayLoad() *payload.DiscountCodesPayload {
 		DiscountCodeID:     c.DiscountCodeID,
 		Title:              c.Title,
 		Description:        c.Description,
+		Quantity:           c.Quantity,
 		Code:               c.Code,
 		DiscountPercentage: c.DiscountPercentage,
 		ValidFrom:          c.ValidFrom,
